AC_INIT(configure.ac)

AM_CONFIG_HEADER(config.h)
AC_INIT(sql2diagram, 0.1)
AM_INIT_AUTOMAKE

AC_LANG_CPLUSPLUS
AC_PROG_CXX
AM_PROG_LIBTOOL

AC_SUBST(LIBXML_LIBS)
AC_SUBST(LIBXML_CFLAGS)
dnl -----------------------------------------------------------------------


AC_OUTPUT(Makefile src/Makefile example/Makefile doc/Makefile win32/Makefile)
