AC_CONFIG_MACRO_DIR([m4])

AC_INIT([sql2diagram], [0.1])
AM_INIT_AUTOMAKE

AC_LANG_CPLUSPLUS
AC_PROG_CXX
AM_PROG_LIBTOOL

AC_SUBST(LIBXML_LIBS)
AC_SUBST(LIBXML_CFLAGS)
dnl -----------------------------------------------------------------------

AC_CONFIG_FILES([
 Makefile
 src/Makefile
 example/Makefile
 doc/Makefile
 win32/Makefile
])

AC_OUTPUT
